<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="callback"
            type="com.example.bluetoothlechat.base.BaseCallback" />

        <variable
            name="model"
            type="com.example.bluetoothlechat.models.ServiceModel" />

        <import type="android.view.View" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@drawable/image_splash">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_child"
            app:callback="@{callback}" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/view_center"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_centerInParent="true" />

            <RelativeLayout
                android:id="@+id/rl_view_lottie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/view_center"
                android:layout_centerInParent="true">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lottie_animation"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_120sdp"
                    app:lottie_autoPlay="false"
                    app:lottie_rawRes="@raw/animation_tick" />

            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_message"
                style="@style/CustomTextViewRegular"
                android:layout_below="@+id/view_center"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:gravity="center"
                android:text="@string/vote_submitted_successfully"
                android:textSize="@dimen/_10sdp"
                android:visibility="gone" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_whole_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/tv_submit">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:orientation="vertical"
                    android:padding="@dimen/_10sdp">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/CustomTextViewRegular"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/title"
                        android:textColor="@color/text_color_gray"
                        android:textSize="@dimen/_10sdp" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_title"
                        style="@style/CustomEditTextWithBorder"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:background="@drawable/bg_border_gray_light_10sdp"
                        android:ellipsize="end"
                        android:gravity="start"
                        android:hint="@string/write_here"
                        android:inputType="textMultiLine"
                        android:paddingStart="@dimen/_12sdp"
                        android:paddingTop="@dimen/_8sdp"
                        android:paddingEnd="@dimen/_12sdp"
                        android:paddingBottom="@dimen/_8sdp"
                        android:singleLine="true" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/CustomTextViewRegular"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/questions"
                        android:textColor="@color/text_color_gray"
                        android:textSize="@dimen/_10sdp" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_question"
                        style="@style/CustomEditTextWithBorder"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:background="@drawable/bg_border_gray_light_10sdp"
                        android:gravity="start"
                        android:hint="@string/write_here"
                        android:inputType="textMultiLine"
                        android:maxLines="6"
                        android:minLines="4"
                        android:paddingStart="@dimen/_12sdp"
                        android:paddingTop="@dimen/_8sdp"
                        android:paddingEnd="@dimen/_12sdp"
                        android:paddingBottom="@dimen/_8sdp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/CustomTextViewRegular"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:text="@string/options"
                        android:textColor="@color/text_color_gray"
                        android:textSize="@dimen/_10sdp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_votes"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:orientation="vertical"
                        android:overScrollMode="never"
                        android:scrollbars="none"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:itemCount="0"
                        tools:listitem="@layout/item_vote_option" />

                </LinearLayout>

            </ScrollView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_submit"
                style="@style/CustomTextViewMedium"
                android:layout_width="match_parent"
                android:layout_alignParentBottom="true"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:onClick="@{(v)->callback.onClick(v)}"
                android:padding="@dimen/_10sdp"
                android:text="@string/submit_my_vote"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />

        </RelativeLayout>

    </RelativeLayout>

</layout>
